# STM32F11_Micro13DOF_Breakout

./: .gitignore  README.md
imu_reader/: Cargo.toml
protocol/: Cargo.toml
protocol/src/: lib.rs
stm32f11-micro13-dof-breakout/: Cargo.toml  Makefile  memory.x
stm32f11-micro13-dof-breakout/.cargo/: config
stm32f11-micro13-dof-breakout/interface/: stlink-v2.cfg
stm32f11-micro13-dof-breakout/src/: main.rs
