[package]
authors = ["Ryan Wicks <ryancwicks@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f11-micro13-dof-breakout"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
nb = "0.1.2"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
usb-device = "0.2.1"
usbd-serial = "0.1"

[dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["rt", "usb_fs", "stm32f411"] # replace the model of your microcontroller here

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f11-micro13-dof-breakout"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
